ui: fix close button alignment in Firefox

--- a/app/assets/stylesheets/modules/map-filters.css.scss
+++ b/app/assets/stylesheets/modules/map-filters.css.scss
@@ -86,6 +86,7 @@ $action-container-height: 60px;
   padding: 0 0 0 16px;
   width: 8px;
   height: 8px;
+  vertical-align: middle;
 }
 
 .input-filters.input-filters-tag {
